# artcode_portfolio

./: .gitignore  Cargo.toml
website/: .eslintignore  .eslintrc.cjs  Cargo.toml  index.html  package.json  postcss.config.js  styles.constants.cjs  tailwind.config.js  tsconfig.json
website/css/: style.min.css
website/src/: components.rs  lib.rs  main.rs  pages.rs  style.pcss
website/src/components/: buttons.rs  components.pcss  menus.rs
website/src/components/buttons/: home.rs
website/src/components/buttons/home/: component.rs  props.rs  style.pcss
website/src/components/menus/: code_style.rs
website/src/components/menus/code_style/: component.rs  jsx_layout.rs  props.rs  rust_layout.rs  tests.rs
website/src/pages/: home.rs
website/src/pages/home/: home.rs  style.pcss
