[package]
name    = "website"
version = "0.1.0"
edition = "2021"

[profile.release] 
codegen-units = 1
opt-level     = "z"
overflow-checks  = true
debug-assertions = false
debug = false
lto   = true
panic = "abort"
rpath = false
incremental = false

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router        = "0.17"
wasm-bindgen      = "0.2.74"
wasm-bindgen-test = "0.3.0"
