[package]
name    = "website"
version = "0.1.0"
edition = "2021"

[target.wasm32-unknown-unknown]
runner = 'wasm-bindgen-test-runner'

[profile.dev]
opt-level = 1
debug-assertions = true
debug = true

[profile.release] 
codegen-units = 1
opt-level     = "z"
overflow-checks  = true
debug-assertions = false
debug = false
lto   = true
panic = "abort"
rpath = false
incremental = false

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router        = "0.17"
wasm-bindgen      = "0.2.74"
wasm-bindgen-test = "0.3.0"
